Remove obsolete logging. Change relevant System.out to task logger. Move NbDocsStreamHandler into CheckHelpSetsBin as inner class.